plugins {
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

repositories {
	maven { url 'https://maven.shedaniel.me/' }
	maven { name = "Terraformers"; url = "https://maven.terraformersmc.com/" }
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"renderfast" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
	implementation("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version}") {
		exclude(group: "net.fabricmc.fabric-api")
	}
	compileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
}

processResources {
	def version = project.version
	inputs.property "version", version

	filesMatching("fabric.mod.json") {
		expand "version": version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	def projectName = project.name
	inputs.property "projectName", projectName

	from("LICENSE") {
		rename { "${it}_$projectName"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}

// Auto-install built mod to project run/mods folder (configurable)
// Usage: gradlew build -PmodsDir="C:/path/to/mods" -PautoCopyToMods=true
def modsDirProp = project.hasProperty('modsDir') ? project.property('modsDir') : null
def autoCopy = project.hasProperty('autoCopyToMods') ? project.property('autoCopyToMods').toString().toBoolean() : true
// default to <projectRoot>/run/mods so the mod is available for the project's run configuration
def defaultModsDir = file("${project.projectDir}/run/mods")

task copyJarToMods(type: Copy) {
	description = 'Copies the built mod jar to the project run/mods folder (deletes previous versions first).'
	group = 'distribution'
	def jarFile = file("${buildDir}/libs/${project.name}-${project.version}.jar")
	from(jarFile)
	def destDir = modsDirProp ? file(modsDirProp) : defaultModsDir
	into destDir
	doFirst {
		if (!jarFile.exists()) throw new GradleException("Jar not found: ${jarFile}")
		println "Preparing to copy ${jarFile} -> ${destDir}"
		destDir.mkdirs()
		// Archive only the canonical current jar (projectName-version.jar) by renaming it with a timestamp
		try {
			def currentName = "${project.name}-${project.version}.jar"
			def now = new Date()
			def ts = now.format("yyyyMMdd-HHmmss")
			def existing = new File(destDir, currentName)
			if (existing.exists()) {
				def base = existing.name.replaceAll(/(\\.jar)$/, "")
				def newName = "${base}-${ts}.jar"
				def target = new File(destDir, newName)
				int i = 1
				while (target.exists()) {
					target = new File(destDir, "${base}-${ts}-${i}.jar")
					i++
				}
				println "Archiving previous mod: ${existing.name} -> ${target.name}"
				if (!existing.renameTo(target)) {
					println "Failed to archive ${existing.name} to ${target.name}"
				}
			}
		} catch (Exception e) { println "Warning while archiving previous jars: ${e.message}" }
	}
}

// After copying, remove archived/older copies if configured to keep none
copyJarToMods.doLast {
	def currentName = "${project.name}-${project.version}.jar"
	def dest = modsDirProp ? file(modsDirProp) : defaultModsDir
	try {
		File[] files = dest.listFiles()
		if (files != null) {
			files.each { File f ->
				if (f.name.toLowerCase().startsWith(project.name.toLowerCase() + "-") && f.name.toLowerCase().endsWith('.jar') && f.name != currentName) {
					println "Deleting older archived mod: ${f.name}"
					if (!f.delete()) println "Failed to delete ${f.name}"
				}
			}
		}
	} catch (Exception e) { println "Warning while cleaning archived jars: ${e.message}" }
}

if (autoCopy) {
	tasks.named('build') {
		finalizedBy copyJarToMods
	}
}
